# CAL

./: .gitignore  README.TXT  README.md
code/: CAL.project  CAL.workspace  CMakeLists.txt  Doxyfile  makefile  tags
code/class_diagram/: Untitled.xcf
code/cmake/: FindCURLpp.cmake
code/data/: exampleBoundingBox.json  exampleSingleNode.json
code/data/examples/: exampleSpeedCameraBoudingBox.json  waysPorto.json
code/data/lisboa_small/: .gitattributes  lisboa.osm  lisboa.tar.xz  nodes.txt  roads.txt  subroads.txt
code/data/lisboa_super_big/: lisboa.osm  roads.txt
code/data/porto/: nodes.txt  porto.osm  porto.tar.xz  porto_nodes.txt  porto_roads.txt  porto_subroads.txt  roads.txt  subroads.txt
code/data/sao_paulo/: roads.txt  sao_paulo.osm
code/run/: lisboa_small.sh  lisboa_super_big.sh  porto.sh  sao_paulo.sh
code/src/: CommandLineParser.cpp  CommandLineParser.hpp  Graph.hpp  Node.cpp  Node.hpp  QueryFileParser.hpp  Road.cpp  Road.hpp  StringAlgorithms.cpp  StringAlgorithms.hpp  Subroad.cpp  Subroad.hpp  TxtMapParser.cpp  TxtMapParser.hpp  WebFetch.cpp  WebFetch.hpp  app.cpp
ide_configuration/eclipse/: .cproject
include/: CommandLineParser.hpp  Graph.hpp  WebFetch.hpp  app.hpp
scripts/: ide_configuration  initUbuntu.sh
src/: CommandLineParser.cpp  WebFetch.cpp  app.cpp
stringAlgorithms/src/: StringAlgorithms.cpp  StringAlgorithms.hpp  main.cpp  matcher.cpp
